--- a/PizzaOS/PizzaOS.vbproj
+++ b/PizzaOS/PizzaOS.vbproj
@@ -46,6 +46,9 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -72,6 +75,18 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frames\Error\Geblokeerd.Designer.vb">
+      <DependentUpon>Geblokeerd.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frames\Error\Geblokeerd.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frames\NoPizza%28Firstime%29.Designer.vb">
+      <DependentUpon>NoPizza%28Firstime%29.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frames\NoPizza%28Firstime%29.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Getstarted.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +123,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Frames\Error\Geblokeerd.resx">
+      <DependentUpon>Geblokeerd.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frames\NoPizza%28Firstime%29.resx">
+      <DependentUpon>NoPizza%28Firstime%29.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Getstarted.resx">
       <DependentUpon>Getstarted.vb</DependentUpon>
     </EmbeddedResource>
@@ -130,10 +151,9 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Pizza\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Images\favicon.png" />
     <Content Include="Images\loader.png" />
   </ItemGroup>
