--- a/PizzaOS/PizzaOS.vbproj
+++ b/PizzaOS/PizzaOS.vbproj
@@ -87,6 +87,8 @@
     <Compile Include="Frames\NoPizza%28Firstime%29.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Functies\checkupdate.vb" />
+    <Compile Include="Functies\downloadpizzas.vb" />
     <Compile Include="Getstarted.vb">
       <SubType>Form</SubType>
     </Compile>
